# pdd-by

./: .hgignore  CMakeLists.txt  COPYING  FindPCRE.cmake  README  README-MacOSX  answer.c  answer.h  chooser_dialog.c  comment.c  comment.h  common.h  config.h.in  database.c  database.h  decode.c  decode.h  delphi_helper.h  help_dialog.c  help_dialog.h  image.c  image.h  main.c  main_window.c  pdd.mdp  pdd.mds  question.c  question.h  question_window.c  question_window.h  section.c  section.h  settings.c  settings.h  ticket_dialog.c  ticket_dialog.h  topic.c  topic.h  traffreg.c  traffreg.h  (+2 more)
CMake/: FindIconv.cmake
MacOS/: Info.plist
MacOS/PddBy.xcodeproj/: project.pbxproj
data/: 10.yml  11.sql  11.yml
pddby/: CMakeLists.txt  answer.c  answer.h  array.c  array.h  callback.c  callback.h  comment.c  comment.h  database.c  database.h  decode.c  decode.h  decode_image.c  decode_image.h  delphi_helper.c  delphi_helper.h  image.c  image.h  pddby.c  pddby.h  question.c  question.h  section.c  section.h  settings.c  settings.h  topic.c  topic.h  traffreg.c  traffreg.h
pddby-cocoa/: CMakeLists.txt  main.m
pddby-gtk/: CMakeLists.txt  chooser_dialog.c  chooser_dialog.h  decode_progress_window.c  decode_progress_window.h  help_dialog.c  help_dialog.h  main.c  main_window.c  main_window.h  platform.h  question_window.c  question_window.h  settings.c  settings.h  ticket_dialog.c  ticket_dialog.h
pddby-gtk/ui/: chooser_dialog.ui  decode_progress_window.ui  help_dialog.ui  main_window.ui  ticket_dialog.ui
pddby-qt/: CMakeLists.txt  main.cpp
pddby/data/: 10.sql
pddby/decode/: decode.c  decode.h  decode_image.c  decode_image.h
pddby/private/: pddby.h  platform.h
pddby/private/decode/: decode.c  decode.h  decode_context.c  decode_context.h  decode_image.c  decode_image.h  decode_questions.c  decode_questions.h  rolling_stones.c  rolling_stones.h  simple_data_parser.c  simple_data_parser.h
pddby/private/util/: aux.c  aux.h  database.c  database.h  delphi.c  delphi.h  regex.c  regex.h  regex_pcre.c  report.c  report.h  settings.c  settings.h  string.c  string.h  string_cfstring.c  string_iconv.c  string_mac.c
pddby/util/: aux.c  aux.h  database.c  database.h  delphi.c  delphi.h  regex.c  regex.h  settings.c  settings.h  string.c  string.h  string_iconv.c  string_mac.c
qt/: CMakeLists.txt  MainWindow.cpp  MainWindow.ui  PddBy.qrc  SectionDialog.cpp  SectionDialog.ui  TicketDialog.cpp  TicketDialog.ui  TicketNumberDialog.cpp  TicketNumberDialog.h  TicketNumberDialog.ui  TopicDialog.cpp  TopicDialog.h  TopicDialog.ui  main.cpp
ui/: chooser_dialog.ui  help_dialog.ui  main_window.ui  question_window.ui  ticket_dialog.ui
